# starkex-for-spot-trading

./: CMakeLists.txt  Dockerfile  README.md
scripts/: requirements-deps.json  requirements-gen.txt  requirements.txt
src/cmake_utils/: python_rules.cmake
src/services/: CMakeLists.txt
src/services/exchange/: extract_cairo_hash.py
src/services/exchange/cairo/: signature_message_hashes.cairo
src/services/exchange/cairo/definitions/: constants.cairo
src/starkware/cairo/: CMakeLists.txt
src/starkware/cairo/dex/: CMakeLists.txt  dex_constants.cairo  dex_context.cairo  execute_batch.cairo  execute_false_full_withdrawal.cairo  execute_limit_order.cairo  execute_modification.cairo  execute_offchain_minting.cairo  execute_settlement.cairo  execute_transfer.cairo  fee.cairo  general_config.cairo  generate_program_hash_test.py  hash_vault_ptr_dict.cairo  l1_vault_update.cairo  main.cairo  main_hint_functions.py  message_hashes.cairo  message_l1_order.cairo  program_hash.json  settlement_hint_functions.py  vault_update.cairo  verify_order_id.cairo  volition.cairo
src/starkware/cairo/lang/compiler/: CMakeLists.txt
src/starkware/crypto/starkware/crypto/signature/: signature_test_data.json
src/starkware/crypto/starkware/crypto/signature/test/config/: signature_test_data.json
src/starkware/python/: CMakeLists.txt  expression_string.py  math_utils.py  math_utils_test.py  merkle_tree.py  random_test.py  utils.py  utils_test.py
